# libjucy

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh
cmake/: PySide2Helper.cmake  Shiboken2Helper.cmake
pyside_bindings/: CMakeLists.txt  bindings.h  bindings.xml
src/: BooleanParameter.cpp  BooleanParameter.h  CMakeLists.txt  IntegerParameter.cpp  IntegerParameter.h  JuceEventLoop.h  JuceHeaders.h  LV2PluginHost.cpp  LV2PluginHost.h  Parameter.cpp  Parameter.h  PluginDescription.h  PluginHost.cpp  PluginHost.h  StringListParameter.cpp  StringListParameter.h  StringParameter.cpp  StringParameter.h  VST3PluginHost.cpp  VST3PluginHost.h
